--- a/week18.html
+++ b/week18.html
@@ -37,7 +37,7 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (1)</b></font></td></tr>
 <tr><td>KMurray</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Hilliard (D)</td>  <td></td><td align=right>0</td></tr>
+<tr><td>Freeman</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Edmonds (D)</td>   <td></td><td align=right>0</td></tr>
 <tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
 <tr><td>THiggins (D)</td>  <td></td><td align=right>0</td></tr>
