--- a/week18.html
+++ b/week18.html
@@ -7,58 +7,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (9)</b></font></td></tr>
-<tr><td>Rodgers (D)</td>   <td></td><td align=right>0</td></tr>
-<tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DAdams (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Higbee (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
+<tr><td>Rodgers (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Chubb</td>         <td></td><td align=right>25</td></tr>
+<tr><td>Ekeler</td>        <td></td><td align=right>210</td></tr>
+<tr><td>DAdams (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>DSamuel</td>       <td></td><td align=right>220</td></tr>
+<tr><td>Higbee (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Gay</td>           <td></td><td align=right>60</td></tr>
 <tr><td>Stevenson</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (4)</b></font></td></tr>
-<tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Herbert</td>       <td></td><td align=right>250</td></tr>
+<tr><td>Kamara</td>        <td></td><td align=right>70</td></tr>
 <tr><td>DWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Lamb (D)</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Ertz</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Sanders</td>       <td></td><td align=right>0</td></tr>
-<tr><td>ZWilson</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Kupp</td>          <td></td><td align=right>105</td></tr>
+<tr><td>Lamb (D)</td>      <td></td><td align=right>***</td></tr>
+<tr><td>Ertz</td>          <td></td><td align=right>40</td></tr>
+<tr><td>Sanders</td>       <td></td><td align=right>90</td></tr>
+<tr><td>Mitchell</td>      <td></td><td align=right>40</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (1)</b></font></td></tr>
-<tr><td>KMurray</td>       <td></td><td align=right>0</td></tr>
+<tr><td>KMurray</td>       <td></td><td align=right>110</td></tr>
 <tr><td>Freeman</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Edmonds (D)</td>   <td></td><td align=right>0</td></tr>
-<tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
-<tr><td>THiggins (D)</td>  <td></td><td align=right>0</td></tr>
-<tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Prater</td>        <td></td><td align=right>0</td></tr>
-<tr><td>MJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Edmonds (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Lockett</td>       <td></td><td align=right>220</td></tr>
+<tr><td>THiggins (D)</td>  <td></td><td align=right>***</td></tr>
+<tr><td>Kelce</td>         <td></td><td align=right>50</td></tr>
+<tr><td>Prater</td>        <td></td><td align=right>120</td></tr>
+<tr><td>MJones</td>        <td></td><td align=right>90</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (2)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Dillon</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Gronkowski</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Gould</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Hubbard</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>150</td></tr>
+<tr><td>Dillon</td>        <td></td><td align=right>30</td></tr>
+<tr><td>Singletary</td>    <td></td><td align=right>140</td></tr>
+<tr><td>Metcalf</td>       <td></td><td align=right>25</td></tr>
+<tr><td>Evans</td>         <td></td><td align=right>190</td></tr>
+<tr><td>Gronkowski</td>    <td></td><td align=right>65</td></tr>
+<tr><td>Gould</td>         <td></td><td align=right>80</td></tr>
+<tr><td>Hubbard</td>       <td></td><td align=right>50</td></tr>
+<tr><td></td>              <td></td><td align=right>730</td></tr>
 </table>
 </td>
 </tr>
@@ -67,57 +67,57 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (3)</b></font></td></tr>
 <tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DCook</td>         <td></td><td align=right>0</td></tr>
+<tr><td>DCook</td>         <td></td><td align=right>35</td></tr>
 <tr><td>JRobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Renfrow</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Schultz</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Folk</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Diggs</td>         <td></td><td align=right>115</td></tr>
+<tr><td>Renfrow</td>       <td></td><td align=right>125</td></tr>
+<tr><td>Schultz</td>       <td></td><td align=right>125</td></tr>
+<tr><td>Folk</td>          <td></td><td align=right>60</td></tr>
 <tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>460</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (5)</b></font></td></tr>
-<tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
+<tr><td>JAllen</td>        <td></td><td align=right>135</td></tr>
+<tr><td>Montgomery</td>    <td></td><td align=right>35</td></tr>
 <tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>DJohnson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Jefferson</td>     <td></td><td align=right>175</td></tr>
+<tr><td>DJohnson</td>      <td></td><td align=right>25</td></tr>
 <tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
-<tr><td>St Brown</td>      <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Bass</td>          <td></td><td align=right>80</td></tr>
+<tr><td>St Brown</td>      <td></td><td align=right>100</td></tr>
+<tr><td></td>              <td></td><td align=right>550</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (6)</b></font></td></tr>
-<tr><td>RWilson</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Penny</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Foreman</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Hill (D)</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Pittman</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Joseph</td>        <td></td><td align=right>0</td></tr>
+<tr><td>RWilson</td>       <td></td><td align=right>280</td></tr>
+<tr><td>Penny</td>         <td></td><td align=right>295</td></tr>
+<tr><td>Foreman</td>       <td></td><td align=right>30</td></tr>
+<tr><td>Hill (D)</td>      <td></td><td align=right>***</td></tr>
+<tr><td>Pittman</td>       <td></td><td align=right>110</td></tr>
+<tr><td>Andrews</td>       <td></td><td align=right>40</td></tr>
+<tr><td>Joseph</td>        <td></td><td align=right>50</td></tr>
 <tr><td>Harris</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (7)</b></font></td></tr>
-<tr><td>Brady (D)</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Henry (D)</td>     <td></td><td align=right>0</td></tr>
-<tr><td>LBell</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Beckham (D)</td>   <td></td><td align=right>0</td></tr>
-<tr><td>MWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Knox (D)</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Zuerlein (D)</td>  <td></td><td align=right>0</td></tr>
-<tr><td>DSmith (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Brady (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Henry (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>LBell</td>         <td></td><td align=right>50</td></tr>
+<tr><td>Beckham (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>MWilliams</td>     <td></td><td align=right>130</td></tr>
+<tr><td>Knox (D)</td>      <td></td><td align=right>***</td></tr>
+<tr><td>Zuerlein (D)</td>  <td></td><td align=right>***</td></tr>
+<tr><td>DSmith (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 </tr>
@@ -125,29 +125,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
-<tr><td>Stafford (D)</td>  <td></td><td align=right>0</td></tr>
-<tr><td>Elliott (D)</td>   <td></td><td align=right>0</td></tr>
-<tr><td>Harris (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td>ABrown (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Mooney</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Stafford (D)</td>  <td></td><td align=right>***</td></tr>
+<tr><td>Elliott (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Harris (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>ABrown (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Mooney</td>        <td></td><td align=right>60</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Lawrence</td>      <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>70</td></tr>
+<tr><td>Lawrence</td>      <td></td><td align=right>80</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (10)</b></font></td></tr>
-<tr><td>THill</td>         <td></td><td align=right>0</td></tr>
-<tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
-<tr><td>AJones (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Allen</td>         <td></td><td align=right>0</td></tr>
-<tr><td>GDavis (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Goedert (D)</td>   <td></td><td align=right>0</td></tr>
-<tr><td>Succop (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td>McPherson (D)</td> <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>THill</td>         <td></td><td align=right>50</td></tr>
+<tr><td>JTaylor</td>       <td></td><td align=right>35</td></tr>
+<tr><td>AJones (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Allen</td>         <td></td><td align=right>25</td></tr>
+<tr><td>GDavis (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Goedert (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Succop (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>McPherson (D)</td> <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -193,7 +193,7 @@
 <tr><td><font size=2>Mike(5)</font></td>
     <td><font size=2>5</font></td>
     <td><font size=2>11</font></td>
-    <td><font size=2>9710</font></td>
+    <td><font size=2>10260</font></td>
     <td><font size=2>10945</font></td>
     <td><font size=2>805</font></td>
     <td><font size=2>325</font></td>
@@ -201,7 +201,7 @@
 <tr><td><font size=2>Steven(3)</font></td>
     <td><font size=2>4</font></td>
     <td><font size=2>12</font></td>
-    <td><font size=2>10050</font></td>
+    <td><font size=2>10510</font></td>
     <td><font size=2>11095</font></td>
     <td><font size=2>1045</font></td>
     <td><font size=2>360</font></td>
@@ -233,7 +233,7 @@
 <tr><td><font size=2>Rich(2)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>11795</font></td>
+    <td><font size=2>12525</font></td>
     <td><font size=2>10005</font></td>
     <td><font size=2>1120</font></td>
     <td><font size=2>305</font></td>
