--- a/week18.html
+++ b/week18.html
@@ -25,11 +25,11 @@
 <tr><td>Kamara</td>        <td></td><td align=right>70</td></tr>
 <tr><td>DWilliams</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Kupp</td>          <td></td><td align=right>105</td></tr>
-<tr><td>Lamb (D)</td>      <td></td><td align=right>***</td></tr>
+<tr><td>Lamb (D)</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Ertz</td>          <td></td><td align=right>40</td></tr>
 <tr><td>Sanders</td>       <td></td><td align=right>90</td></tr>
 <tr><td>Mitchell</td>      <td></td><td align=right>40</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>595</td></tr>
 </table>
 </td>
 <td></td><td></td>
@@ -40,7 +40,7 @@
 <tr><td>Freeman</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Edmonds (D)</td>   <td></td><td align=right>***</td></tr>
 <tr><td>Lockett</td>       <td></td><td align=right>220</td></tr>
-<tr><td>THiggins (D)</td>  <td></td><td align=right>***</td></tr>
+<tr><td>THiggins (D)</td>  <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>50</td></tr>
 <tr><td>Prater</td>        <td></td><td align=right>120</td></tr>
 <tr><td>MJones</td>        <td></td><td align=right>90</td></tr>
@@ -98,25 +98,25 @@
 <tr><td>RWilson</td>       <td></td><td align=right>280</td></tr>
 <tr><td>Penny</td>         <td></td><td align=right>295</td></tr>
 <tr><td>Foreman</td>       <td></td><td align=right>30</td></tr>
-<tr><td>Hill (D)</td>      <td></td><td align=right>***</td></tr>
+<tr><td>Hill (D)</td>      <td></td><td align=right>125</td></tr>
 <tr><td>Pittman</td>       <td></td><td align=right>110</td></tr>
 <tr><td>Andrews</td>       <td></td><td align=right>40</td></tr>
 <tr><td>Joseph</td>        <td></td><td align=right>50</td></tr>
 <tr><td>Harris</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>930</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (7)</b></font></td></tr>
-<tr><td>Brady (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Brady (D)</td>     <td></td><td align=right>140</td></tr>
 <tr><td>Henry (D)</td>     <td></td><td align=right>***</td></tr>
 <tr><td>LBell</td>         <td></td><td align=right>50</td></tr>
 <tr><td>Beckham (D)</td>   <td></td><td align=right>***</td></tr>
 <tr><td>MWilliams</td>     <td></td><td align=right>130</td></tr>
-<tr><td>Knox (D)</td>      <td></td><td align=right>***</td></tr>
-<tr><td>Zuerlein (D)</td>  <td></td><td align=right>***</td></tr>
-<tr><td>DSmith (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Knox (D)</td>      <td></td><td align=right>190</td></tr>
+<tr><td>Zuerlein (D)</td>  <td></td><td align=right>70</td></tr>
+<tr><td>DSmith (D)</td>    <td></td><td align=right>35</td></tr>
 <tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
@@ -126,8 +126,8 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
 <tr><td>Stafford (D)</td>  <td></td><td align=right>***</td></tr>
-<tr><td>Elliott (D)</td>   <td></td><td align=right>***</td></tr>
-<tr><td>Harris (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Elliott (D)</td>   <td></td><td align=right>0</td></tr>
+<tr><td>Harris (D)</td>    <td></td><td align=right>0</td></tr>
 <tr><td>ABrown (D)</td>    <td></td><td align=right>***</td></tr>
 <tr><td>Mooney</td>        <td></td><td align=right>60</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
@@ -143,10 +143,10 @@
 <tr><td>JTaylor</td>       <td></td><td align=right>35</td></tr>
 <tr><td>AJones (D)</td>    <td></td><td align=right>***</td></tr>
 <tr><td>Allen</td>         <td></td><td align=right>25</td></tr>
-<tr><td>GDavis (D)</td>    <td></td><td align=right>***</td></tr>
-<tr><td>Goedert (D)</td>   <td></td><td align=right>***</td></tr>
-<tr><td>Succop (D)</td>    <td></td><td align=right>***</td></tr>
-<tr><td>McPherson (D)</td> <td></td><td align=right>***</td></tr>
+<tr><td>GDavis (D)</td>    <td></td><td align=right>75</td></tr>
+<tr><td>Goedert (D)</td>   <td></td><td align=right>45</td></tr>
+<tr><td>Succop (D)</td>    <td></td><td align=right>50</td></tr>
+<tr><td>McPherson (D)</td> <td></td><td align=right>135</td></tr>
 <tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 <td></td><td></td>
@@ -217,7 +217,7 @@
 <tr><td><font size=2>Grant(4)</font></td>
     <td><font size=2>11</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>11530</font></td>
+    <td><font size=2>12125</font></td>
     <td><font size=2>9810</font></td>
     <td><font size=2>895</font></td>
     <td><font size=2>400</font></td>
@@ -241,9 +241,9 @@
 <tr><td><font size=2>States(6)</font></td>
     <td><font size=2>7</font></td>
     <td><font size=2>9</font></td>
-    <td><font size=2>8650</font></td>
+    <td><font size=2>9580</font></td>
     <td><font size=2>9955</font></td>
-    <td><font size=2>795</font></td>
+    <td><font size=2>930</font></td>
     <td><font size=2>150</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Randy(8)</font></td>
