--- a/week18.html
+++ b/week18.html
@@ -12,7 +12,7 @@
 <tr><td>Ekeler</td>        <td></td><td align=right>210</td></tr>
 <tr><td>DAdams (D)</td>    <td></td><td align=right>***</td></tr>
 <tr><td>DSamuel</td>       <td></td><td align=right>220</td></tr>
-<tr><td>Higbee (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Higbee (D)</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Gay</td>           <td></td><td align=right>60</td></tr>
 <tr><td>Stevenson</td>     <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>***</td></tr>
@@ -38,13 +38,13 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (1)</b></font></td></tr>
 <tr><td>KMurray</td>       <td></td><td align=right>110</td></tr>
 <tr><td>Freeman</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Edmonds (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Edmonds (D)</td>   <td></td><td align=right>0</td></tr>
 <tr><td>Lockett</td>       <td></td><td align=right>220</td></tr>
 <tr><td>THiggins (D)</td>  <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>50</td></tr>
 <tr><td>Prater</td>        <td></td><td align=right>120</td></tr>
 <tr><td>MJones</td>        <td></td><td align=right>90</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>590</td></tr>
 </table>
 </td>
 <td>
@@ -112,7 +112,7 @@
 <tr><td>Brady (D)</td>     <td></td><td align=right>140</td></tr>
 <tr><td>Henry (D)</td>     <td></td><td align=right>***</td></tr>
 <tr><td>LBell</td>         <td></td><td align=right>50</td></tr>
-<tr><td>Beckham (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Beckham (D)</td>   <td></td><td align=right>75</td></tr>
 <tr><td>MWilliams</td>     <td></td><td align=right>130</td></tr>
 <tr><td>Knox (D)</td>      <td></td><td align=right>190</td></tr>
 <tr><td>Zuerlein (D)</td>  <td></td><td align=right>70</td></tr>
@@ -125,7 +125,7 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
-<tr><td>Stafford (D)</td>  <td></td><td align=right>***</td></tr>
+<tr><td>Stafford (D)</td>  <td></td><td align=right>150</td></tr>
 <tr><td>Elliott (D)</td>   <td></td><td align=right>0</td></tr>
 <tr><td>Harris (D)</td>    <td></td><td align=right>0</td></tr>
 <tr><td>ABrown (D)</td>    <td></td><td align=right>***</td></tr>
@@ -177,7 +177,7 @@
 <tr><td><font size=2>Matthew(1)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>10730</font></td>
+    <td><font size=2>11320</font></td>
     <td><font size=2>9440</font></td>
     <td><font size=2>1360</font></td>
     <td><font size=2>220</font></td>
