--- a/playoff.html
+++ b/playoff.html
@@ -9,6 +9,12 @@
     <td><b>Semifinal</b></td>
     <td><b>Points Champion</td>
     <td><b>2nd Points</b></td></tr>
+<tr><td>2021</td>
+    <td>Grant(595)-Sam(590)</td>
+    <td>Grant(680)-Matthew(630)</td>
+    <td>Sam(815)-John(415)</td>
+    <td>Sam (12865)</td>
+    <td>Rich (12525)</td></tr>
 <tr><td>2020</td>
     <td>Steven(1195)-Randy(860)</td>
     <td>Steven(1045)-States(580)</td>
@@ -16,8 +22,8 @@
     <td>Sam (15100)</td>
     <td>Steven (12710)</td></tr>
 <tr><td>2019</td>
-    <td>Matt(795)-Randy(500)</td>
-    <td>Matt(875)-Rich(415)</td>
+    <td>Matthew(795)-Randy(500)</td>
+    <td>Matthew(875)-Rich(415)</td>
     <td>Randy(1115)-States(705)</td>
     <td>Randy (13285)</td>
     <td>States (12150)</td></tr>
@@ -34,26 +40,26 @@
     <td>Grant (11035)</td>
     <td>Steven (10815)</td></tr>
 <tr><td>2016</td>
-    <td>John(1245)-Matt(670)</td>
+    <td>John(1245)-Matthew(670)</td>
     <td>John(935)-Sam(680)</td>
-    <td>Matt(915)-Rich(595)</td>
+    <td>Matthew(915)-Rich(595)</td>
     <td>John (11985)</td>
     <td>Rich (11135)</td></tr>
 <tr><td>2015</td>
-    <td>States(715)-Matt(645)</td>
+    <td>States(715)-Matthew(645)</td>
     <td>States(775)-Sam(685)</td>
-    <td>Matt(780)-Randy(610)</td>
+    <td>Matthew(780)-Randy(610)</td>
     <td>Sam (12825)</td>
     <td>John (12610)</td></tr>
 <tr><td>2014</td>
     <td>Grant(850)-Rich(710)</td>
     <td>Grant(615)-John(615)</td>
-    <td>Rich(395)-Matt(340)</td>
+    <td>Rich(395)-Matthew(340)</td>
     <td>Grant (13535)</td>
     <td>John (11540)</td></tr>
 <tr><td>2013</td>
-    <td>Matt(790)-Steven(490)</td>
-    <td>Matt(910)-Grant(795)</td>
+    <td>Matthew(790)-Steven(490)</td>
+    <td>Matthew(910)-Grant(795)</td>
     <td>Steven(370)-States(280)</td>
     <td>Grant (13840)</td>
     <td>Randy (11780)</td></tr>
@@ -61,7 +67,7 @@
     <td>Steven(855)-Randy(760)</td>
     <td>Steven(1180)-Mike(575)</td>
     <td>Randy(620)-John(455)</td>
-    <td>Matt (13580)</td>
+    <td>Matthew (13580)</td>
     <td>Steven (13055)</td></tr>
 <tr><td>2011</td>
     <td>Roger(850)-Randy(705)</td>
@@ -88,9 +94,9 @@
     <td>Brian (11550)</td>
     <td>Randy (11105)</td></tr>
 <tr><td>2007</td>
-    <td>Roger(720)-Matt(520)</td>
+    <td>Roger(720)-Matthew(520)</td>
     <td>Roger(665)-Grant(370)</td>
-    <td>Matt(415)-Mike(355)</td>
+    <td>Matthew(415)-Mike(355)</td>
     <td>Roger (12730)</td>
     <td>Grant (11725)</td></tr>
 <tr><td>2006</td>
@@ -100,8 +106,8 @@
     <td>Mike (12165)</td>
     <td>Brian (10910)</td></tr>
 <tr><td>2005</td>
-    <td>Matt(480)-Grant(420)</td>
-    <td>Matt(1015)-John(760)</td>
+    <td>Matthew(480)-Grant(420)</td>
+    <td>Matthew(1015)-John(760)</td>
     <td>Grant(605)-Steven(560)</td>
     <td>John (12270)</td>
     <td>Grant (10920)</td></tr>
@@ -113,13 +119,13 @@
     <td>Steven (11755)</td></tr>
 <tr><td>2003</td>
     <td>Rich(430)-Randy(250)</td>
-    <td>Rich(690)-Matt(570)</td>
+    <td>Rich(690)-Matthew(570)</td>
     <td>Randy(835)-Roger(240)</td>
     <td>Rich (11175)</td>
     <td>John (10525)</td></tr>
 <tr><td>2002</td>
     <td>States(405)-Mike(185)</td>
-    <td>States(320)-Matt(315)</td>
+    <td>States(320)-Matthew(315)</td>
     <td>Mike(265)-Randy(250)</td>
     <td>Randy (12880)</td>
     <td>John (11185)</td></tr>
@@ -136,20 +142,20 @@
     <td>Steve (11830)</td>
     <td>Brian (11555)</td></tr>
 <tr><td>1999</td>
-    <td>Matt(870)-Grant(820)</td>
-    <td>Matt(1190)-Steve(240)</td>
+    <td>Matthew(870)-Grant(820)</td>
+    <td>Matthew(1190)-Steve(240)</td>
     <td>Grant(730)-Brian(380)</td>
     <td>Grant (11525)</td>
-    <td>Matt (11165)</td></tr>
+    <td>Matthew (11165)</td></tr>
 <tr><td>1998</td>
-    <td>Roger(555)-Matt(520)</td>
+    <td>Roger(555)-Matthew(520)</td>
     <td>Roger(570)-Mike(505)</td>
-    <td>Matt(455)-Randy(350)</td>
+    <td>Matthew(455)-Randy(350)</td>
     <td>Mike (9700)</td>
-    <td>Matt (9545)</td></tr>
+    <td>Matthew (9545)</td></tr>
 <tr><td>1997</td>
     <td>Randy(290)-Grant(180)</td>
-    <td>Randy(435)-Matt(370)</td>
+    <td>Randy(435)-Matthew(370)</td>
     <td>Grant(740)-Steve(325)</td>
     <td>Randy (8565)</td>
     <td>Grant (8160)</td></tr>
