--- a/leader.html
+++ b/leader.html
@@ -12,9 +12,9 @@
 <tr><td><font size=3>5)</td><td><font size=3>Matthew Stafford       </td><td><font size=3>2840</td></tr>
 <tr><td><font size=3>6)</td><td><font size=3>Patrick Mahomes        </td><td><font size=3>2800</td></tr>
 <tr><td><font size=3>7)</td><td><font size=3>Dak Prescott           </td><td><font size=3>2490</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Kirk Cousins           </td><td><font size=3>2435</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Kyler Murray           </td><td><font size=3>2430</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Aaron Rodgers          </td><td><font size=3>2420</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Aaron Rodgers          </td><td><font size=3>2450</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Kirk Cousins           </td><td><font size=3>2435</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Kyler Murray           </td><td><font size=3>2430</td></tr>
 <tr><td><font size=3>11)</td><td><font size=3>Russell Wilson         </td><td><font size=3>2035</td></tr>
 <tr><td><font size=3>12)</td><td><font size=3>Jalen Hurts            </td><td><font size=3>1960</td></tr>
 <tr><td><font size=3>13)</td><td><font size=3>Derek Carr             </td><td><font size=3>1900</td></tr>
@@ -48,19 +48,19 @@
 <tr><td><font size=3>Joe Mixon              </td><td><font size=3>1920</td></tr>
 <tr><td><font size=3>Austin Ekeler          </td><td><font size=3>1910</td></tr>
 <tr><td><font size=3>James Conner           </td><td><font size=3>1655</td></tr>
+<tr><td><font size=3>Derrick Henry          </td><td><font size=3>1590</td></tr>
 <tr><td><font size=3>Damien Harris          </td><td><font size=3>1525</td></tr>
 <tr><td><font size=3>Nick Chubb             </td><td><font size=3>1520</td></tr>
-<tr><td><font size=3>Derrick Henry          </td><td><font size=3>1510</td></tr>
 <tr><td><font size=3>Cordarrelle Patterson  </td><td><font size=3>1310</td></tr>
 <tr><td><font size=3>Melvin Gordon          </td><td><font size=3>1295</td></tr>
 <tr><td><font size=3>Alvin Kamara           </td><td><font size=3>1250</td></tr>
 <tr><td><font size=3>Ezekiel Elliott        </td><td><font size=3>1115</td></tr>
 <tr><td><font size=3>Rashaad Penny          </td><td><font size=3>1110</td></tr>
 <tr><td><font size=3>Antonio Gibson         </td><td><font size=3>1095</td></tr>
+<tr><td><font size=3>Aaron Jones            </td><td><font size=3>1060</td></tr>
 <tr><td><font size=3>Dalvin Cook            </td><td><font size=3>1055</td></tr>
 <tr><td><font size=3>D'Andre Swift          </td><td><font size=3>1045</td></tr>
 <tr><td><font size=3>Leonard Fournette      </td><td><font size=3>1035</td></tr>
-<tr><td><font size=3>Aaron Jones            </td><td><font size=3>1000</td></tr>
 <tr><td><font size=3>Devin Singletary       </td><td><font size=3> 925</td></tr>
 <tr><td><font size=3>Josh Jacobs            </td><td><font size=3> 855</td></tr>
 <tr><td><font size=3>David Montgomery       </td><td><font size=3> 780</td></tr>
@@ -87,7 +87,7 @@
 <tr><td><font size=3>Cooper Kupp            </td><td><font size=3>2085</td></tr>
 <tr><td><font size=3>Justin Jefferson       </td><td><font size=3>1560</td></tr>
 <tr><td><font size=3>Mike Evans             </td><td><font size=3>1480</td></tr>
-<tr><td><font size=3>Davante Adams          </td><td><font size=3>1400</td></tr>
+<tr><td><font size=3>Davante Adams          </td><td><font size=3>1445</td></tr>
 <tr><td><font size=3>DK Metcalf             </td><td><font size=3>1335</td></tr>
 <tr><td><font size=3>Tyreek Hill            </td><td><font size=3>1325</td></tr>
 <tr><td><font size=3>Mike Williams          </td><td><font size=3>1320</td></tr>
@@ -109,6 +109,7 @@
 <tr><td><font size=3>Van Jefferson          </td><td><font size=3> 825</td></tr>
 <tr><td><font size=3>Kendrick Bourne        </td><td><font size=3> 820</td></tr>
 <tr><td><font size=3>DeAndre Hopkins        </td><td><font size=3> 815</td></tr>
+<tr><td><font size=3>AJ Brown               </td><td><font size=3> 800</td></tr>
 <tr><td><font size=3>Christian Kirk         </td><td><font size=3> 785</td></tr>
 <tr><td><font size=3>Darnell Mooney         </td><td><font size=3> 785</td></tr>
 <tr><td><font size=3>Jamal Agnew            </td><td><font size=3> 745</td></tr>
@@ -117,7 +118,6 @@
 <tr><td><font size=3>Tyler Boyd             </td><td><font size=3> 720</td></tr>
 <tr><td><font size=3>Marquez Callaway       </td><td><font size=3> 675</td></tr>
 <tr><td><font size=3>Russell Gage           </td><td><font size=3> 665</td></tr>
-<tr><td><font size=3>Tim Patrick            </td><td><font size=3> 650</td></tr>
 </table>
 </td></tr><tr><td><br><br><br><br></td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
