--- a/week18.html
+++ b/week18.html
@@ -7,15 +7,15 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (9)</b></font></td></tr>
-<tr><td>Rodgers (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Rodgers (D)</td>   <td></td><td align=right>30</td></tr>
 <tr><td>Chubb</td>         <td></td><td align=right>25</td></tr>
 <tr><td>Ekeler</td>        <td></td><td align=right>210</td></tr>
-<tr><td>DAdams (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>DAdams (D)</td>    <td></td><td align=right>45</td></tr>
 <tr><td>DSamuel</td>       <td></td><td align=right>220</td></tr>
 <tr><td>Higbee (D)</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Gay</td>           <td></td><td align=right>60</td></tr>
 <tr><td>Stevenson</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>590</td></tr>
 </table>
 </td>
 <td>
@@ -110,14 +110,14 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (7)</b></font></td></tr>
 <tr><td>Brady (D)</td>     <td></td><td align=right>140</td></tr>
-<tr><td>Henry (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Henry (D)</td>     <td></td><td align=right>80</td></tr>
 <tr><td>LBell</td>         <td></td><td align=right>50</td></tr>
 <tr><td>Beckham (D)</td>   <td></td><td align=right>75</td></tr>
 <tr><td>MWilliams</td>     <td></td><td align=right>130</td></tr>
 <tr><td>Knox (D)</td>      <td></td><td align=right>190</td></tr>
 <tr><td>Zuerlein (D)</td>  <td></td><td align=right>70</td></tr>
 <tr><td>DSmith (D)</td>    <td></td><td align=right>35</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>770</td></tr>
 </table>
 </td>
 </tr>
@@ -128,12 +128,12 @@
 <tr><td>Stafford (D)</td>  <td></td><td align=right>150</td></tr>
 <tr><td>Elliott (D)</td>   <td></td><td align=right>0</td></tr>
 <tr><td>Harris (D)</td>    <td></td><td align=right>0</td></tr>
-<tr><td>ABrown (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>ABrown (D)</td>    <td></td><td align=right>170</td></tr>
 <tr><td>Mooney</td>        <td></td><td align=right>60</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Tucker</td>        <td></td><td align=right>70</td></tr>
 <tr><td>Lawrence</td>      <td></td><td align=right>80</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>530</td></tr>
 </table>
 </td>
 <td>
@@ -141,13 +141,13 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (10)</b></font></td></tr>
 <tr><td>THill</td>         <td></td><td align=right>50</td></tr>
 <tr><td>JTaylor</td>       <td></td><td align=right>35</td></tr>
-<tr><td>AJones (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>AJones (D)</td>    <td></td><td align=right>60</td></tr>
 <tr><td>Allen</td>         <td></td><td align=right>25</td></tr>
 <tr><td>GDavis (D)</td>    <td></td><td align=right>75</td></tr>
 <tr><td>Goedert (D)</td>   <td></td><td align=right>45</td></tr>
 <tr><td>Succop (D)</td>    <td></td><td align=right>50</td></tr>
 <tr><td>McPherson (D)</td> <td></td><td align=right>135</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>475</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -169,7 +169,7 @@
 <tr><td><font size=2>Sam(9)</font></td>
     <td><font size=2>11</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>12275</font></td>
+    <td><font size=2>12865</font></td>
     <td><font size=2>9010</font></td>
     <td><font size=2>1300</font></td>
     <td><font size=2>395</font></td>
@@ -185,7 +185,7 @@
 <tr><td><font size=2>Roger(7)</font></td>
     <td><font size=2>8</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>10455</font></td>
+    <td><font size=2>11225</font></td>
     <td><font size=2>9770</font></td>
     <td><font size=2>1325</font></td>
     <td><font size=2>135</font></td>
@@ -225,7 +225,7 @@
 <tr><td><font size=2>John(10)</font></td>
     <td><font size=2>11</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>10350</font></td>
+    <td><font size=2>10825</font></td>
     <td><font size=2>8330</font></td>
     <td><font size=2>1065</font></td>
     <td><font size=2>360</font></td>
@@ -245,11 +245,11 @@
     <td><font size=2>9955</font></td>
     <td><font size=2>930</font></td>
     <td><font size=2>150</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2>Randy(8)</font></td>
     <td><font size=2>6</font></td>
     <td><font size=2>10</font></td>
-    <td><font size=2>10250</font></td>
+    <td><font size=2>10780</font></td>
     <td><font size=2>10655</font></td>
     <td><font size=2>830</font></td>
     <td><font size=2>250</font></td>
