--- a/week1.html
+++ b/week1.html
@@ -6,148 +6,148 @@
 <tr>
 <td>
 <table border=0 cellspacing=0 width=140>
-<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (1)</b></font></td></tr>
-<tr><td>KMurray</td>       <td></td><td align=right>295</td></tr>
-<tr><td>McCaffrey</td>     <td></td><td align=right>85</td></tr>
-<tr><td>Swift</td>         <td></td><td align=right>165</td></tr>
-<tr><td>Thielen</td>       <td></td><td align=right>195</td></tr>
-<tr><td>Lockett</td>       <td></td><td align=right>275</td></tr>
-<tr><td>Kelce</td>         <td></td><td align=right>185</td></tr>
-<tr><td>McManus</td>       <td></td><td align=right>65</td></tr>
-<tr><td>MJones</td>        <td></td><td align=right>95</td></tr>
-<tr><td></td>              <td></td><td align=right>1360</td></tr>
+<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (1)</b></font></td></tr>
+<tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
+<tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Mitchell</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
+<tr><td>THill</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Pickens</td>       <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
-<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (7)</b></font></td></tr>
-<tr><td>Brady</td>         <td></td><td align=right>265</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>25</td></tr>
-<tr><td>Sermon</td>        <td></td><td align=right>0</td></tr>
-<tr><td>ABrown</td>        <td></td><td align=right>185</td></tr>
-<tr><td>Cooper</td>        <td></td><td align=right>215</td></tr>
-<tr><td>Waller</td>        <td></td><td align=right>125</td></tr>
-<tr><td>Butker</td>        <td></td><td align=right>80</td></tr>
-<tr><td>Pitts</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>895</td></tr>
+<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (7)</b></font></td></tr>
+<tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
-<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (2)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>305</td></tr>
-<tr><td>Mixon</td>         <td></td><td align=right>110</td></tr>
-<tr><td>Singletary</td>    <td></td><td align=right>35</td></tr>
-<tr><td>Metcalf</td>       <td></td><td align=right>105</td></tr>
-<tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Gronkowski</td>    <td></td><td align=right>170</td></tr>
-<tr><td>Gould</td>         <td></td><td align=right>115</td></tr>
-<tr><td>EMoore</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>840</td></tr>
+<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (2)</b></font></td></tr>
+<tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Sanders</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Gesicki</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Blankenship</td>   <td></td><td align=right>0</td></tr>
+<tr><td>JCook</td>         <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
-<tr><td>Stafford</td>      <td></td><td align=right>280</td></tr>
-<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>MSanders</td>      <td></td><td align=right>45</td></tr>
-<tr><td>ABrown</td>        <td></td><td align=right>75</td></tr>
-<tr><td>ARobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Kittle</td>        <td></td><td align=right>35</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>105</td></tr>
-<tr><td>Lawrence</td>      <td></td><td align=right>255</td></tr>
-<tr><td></td>              <td></td><td align=right>795</td></tr>
+<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>DCook</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Swift</td>         <td></td><td align=right>0</td></tr>
+<tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Waddle</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Succop</td>        <td></td><td align=right>0</td></tr>
+<tr><td>London</td>        <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
 </tr>
 <tr>
 <td>
 <table border=0 cellspacing=0 width=140>
-<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (3)</b></font></td></tr>
-<tr><td>LJackson</td>      <td></td><td align=right>110</td></tr>
-<tr><td>DCook</td>         <td></td><td align=right>80</td></tr>
-<tr><td>JRobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Ridley</td>        <td></td><td align=right>25</td></tr>
-<tr><td>Diggs</td>         <td></td><td align=right>30</td></tr>
-<tr><td>LThomas</td>       <td></td><td align=right>75</td></tr>
-<tr><td>Koo</td>           <td></td><td align=right>40</td></tr>
-<tr><td>Nordin</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>360</td></tr>
+<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (3)</b></font></td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Penny</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Lazard</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Schultz</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
+<tr><td>Pierce</td>        <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
-<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (9)</b></font></td></tr>
-<tr><td>Rodgers</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Chubb</td>         <td></td><td align=right>190</td></tr>
-<tr><td>TWilliams</td>     <td></td><td align=right>180</td></tr>
-<tr><td>DAdams</td>        <td></td><td align=right>25</td></tr>
-<tr><td>JJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hockenson</td>     <td></td><td align=right>120</td></tr>
-<tr><td>Gay</td>           <td></td><td align=right>100</td></tr>
-<tr><td>Lance</td>         <td></td><td align=right>25</td></tr>
-<tr><td></td>              <td></td><td align=right>640</td></tr>
+<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (9)</b></font></td></tr>
+<tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
+<tr><td>NHarris</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
+<tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
+<tr><td>DMoore</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Hall</td>          <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
-<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (4)</b></font></td></tr>
-<tr><td>Herbert</td>       <td></td><td align=right>80</td></tr>
-<tr><td>Kamara</td>        <td></td><td align=right>90</td></tr>
-<tr><td>EdwardsHelaire</td><td></td><td align=right>0</td></tr>
-<tr><td>Lamb</td>          <td></td><td align=right>150</td></tr>
-<tr><td>RAnderson</td>     <td></td><td align=right>150</td></tr>
-<tr><td>Gesicki</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Sanders</td>       <td></td><td align=right>55</td></tr>
-<tr><td>ZWilson</td>       <td></td><td align=right>170</td></tr>
-<tr><td></td>              <td></td><td align=right>695</td></tr>
+<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (4)</b></font></td></tr>
+<tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
+<tr><td>McCaffrey</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Pittman</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
+<tr><td>McPherson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Pickett</td>       <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (10)</b></font></td></tr>
-<tr><td>Hurts</td>         <td></td><td align=right>245</td></tr>
-<tr><td>JTaylor</td>       <td></td><td align=right>55</td></tr>
-<tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hopkins</td>       <td></td><td align=right>165</td></tr>
-<tr><td>Allen</td>         <td></td><td align=right>50</td></tr>
-<tr><td>Goedert</td>       <td></td><td align=right>75</td></tr>
-<tr><td>Succop</td>        <td></td><td align=right>50</td></tr>
-<tr><td>McPherson</td>     <td></td><td align=right>105</td></tr>
-<tr><td></td>              <td></td><td align=right>745</td></tr>
+<tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Fournette</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
+<tr><td>ARobinson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Ertz</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Gano</td>          <td></td><td align=right>0</td></tr>
+<tr><td>York</td>          <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
 </tr>
 <tr>
 <td>
 <table border=0 cellspacing=0 width=140>
-<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (5)</b></font></td></tr>
-<tr><td>JAllen</td>        <td></td><td align=right>65</td></tr>
-<tr><td>Gibson</td>        <td></td><td align=right>45</td></tr>
-<tr><td>Edmonds</td>       <td></td><td align=right>30</td></tr>
-<tr><td>Jefferson</td>     <td></td><td align=right>35</td></tr>
-<tr><td>Woods</td>         <td></td><td align=right>50</td></tr>
-<tr><td>Tonyan</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Bass</td>          <td></td><td align=right>100</td></tr>
-<tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>325</td></tr>
+<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (5)</b></font></td></tr>
+<tr><td>Stafford</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
+<tr><td>MWilliams</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Higgins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Pitts</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Carlson</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Burks</td>         <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
-<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (6)</b></font></td></tr>
-<tr><td>RWilson</td>       <td></td><td align=right>310</td></tr>
-<tr><td>Jacobs</td>        <td></td><td align=right>150</td></tr>
-<tr><td>Carson</td>        <td></td><td align=right>45</td></tr>
-<tr><td>Smith-Schuster</td><td></td><td align=right>25</td></tr>
-<tr><td>Hill</td>          <td></td><td align=right>220</td></tr>
-<tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Blankenship</td>   <td></td><td align=right>25</td></tr>
-<tr><td>Harris</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>775</td></tr>
+<tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (6)</b></font></td></tr>
+<tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
+<tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Etienne</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
+<tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Knox</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Prater</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Spiller</td>       <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 <td></td><td></td>
 </td>
