--- a/week1.html
+++ b/week1.html
@@ -37,10 +37,10 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (2)</b></font></td></tr>
 <tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Akers</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Sanders</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
+<tr><td>JJefferson</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Gesicki</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Blankenship</td>   <td></td><td align=right>0</td></tr>
 <tr><td>JCook</td>         <td></td><td align=right>0</td></tr>
@@ -52,9 +52,9 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
 <tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
 <tr><td>DCook</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Swift</td>         <td></td><td align=right>0</td></tr>
+<tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Waddle</td>        <td></td><td align=right>0</td></tr>
+<tr><td>DJohnson</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Succop</td>        <td></td><td align=right>0</td></tr>
 <tr><td>London</td>        <td></td><td align=right>0</td></tr>
@@ -114,7 +114,7 @@
 <tr><td>Fournette</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
 <tr><td>ARobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Ertz</td>          <td></td><td align=right>0</td></tr>
+<tr><td>THill</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Gano</td>          <td></td><td align=right>0</td></tr>
 <tr><td>York</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -166,45 +166,45 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
-<tr><td><font size=2>Matthew(1)</font></td>
-    <td><font size=2>1</font></td>
+<tr><td><font size=2>Roger(1)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>1360</font></td>
-    <td><font size=2>895</font></td>
-    <td><font size=2>1360</font></td>
-    <td><font size=2>1360</font></td>
-    <td><font size=2>1</font></td>
-<tr><td><font size=2>Sam(9)</font></td>
-    <td><font size=2>1</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>640</font></td>
-    <td><font size=2>360</font></td>
-    <td><font size=2>640</font></td>
-    <td><font size=2>640</font></td>
     <td><font size=2>0</font></td>
-<tr><td><font size=2>Roger(7)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>895</font></td>
-    <td><font size=2>1360</font></td>
-    <td><font size=2>895</font></td>
-    <td><font size=2>895</font></td>
     <td><font size=2>0</font></td>
-<tr><td><font size=2>Steven(3)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>360</font></td>
-    <td><font size=2>640</font></td>
-    <td><font size=2>360</font></td>
-    <td><font size=2>360</font></td>
     <td><font size=2>0</font></td>
-<tr><td><font size=2>Mike(5)</font></td>
+<tr><td><font size=2>Mike(3)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>325</font></td>
-    <td><font size=2>775</font></td>
-    <td><font size=2>325</font></td>
-    <td><font size=2>325</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Grant(5)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Matthew(7)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Steven(9)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -214,44 +214,44 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
-<tr><td><font size=2>Rich(2)</font></td>
-    <td><font size=2>1</font></td>
+<tr><td><font size=2>States(2)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>840</font></td>
-    <td><font size=2>795</font></td>
-    <td><font size=2>840</font></td>
-    <td><font size=2>840</font></td>
     <td><font size=2>0</font></td>
-<tr><td><font size=2>States(6)</font></td>
-    <td><font size=2>1</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>775</font></td>
-    <td><font size=2>325</font></td>
-    <td><font size=2>775</font></td>
-    <td><font size=2>775</font></td>
     <td><font size=2>0</font></td>
-<tr><td><font size=2>John(10)</font></td>
-    <td><font size=2>1</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>745</font></td>
-    <td><font size=2>695</font></td>
-    <td><font size=2>745</font></td>
-    <td><font size=2>745</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Sam(4)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>Rich(6)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Randy(8)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>795</font></td>
-    <td><font size=2>840</font></td>
-    <td><font size=2>795</font></td>
-    <td><font size=2>795</font></td>
     <td><font size=2>0</font></td>
-<tr><td><font size=2>Grant(4)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>695</font></td>
-    <td><font size=2>745</font></td>
-    <td><font size=2>695</font></td>
-    <td><font size=2>695</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+<tr><td><font size=2>John(10)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>0</font></td>
     <td><font size=2>0</font></td>
 </table>
