--- a/week1.html
+++ b/week1.html
@@ -70,7 +70,7 @@
 <tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Penny</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Lazard</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Gabriel</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Schultz</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
 <tr><td>Pierce</td>        <td></td><td align=right>0</td></tr>
