--- a/roster.html
+++ b/roster.html
@@ -51,7 +51,7 @@
 <tr><td>MIA</td><td>Mike Gesicki           </td></tr>
 <tr><td>PIT</td><td>Pat Freiermuth         </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>IND</td><td>Rodrigo Blankenship    </td></tr>
+<tr><td>ATL</td><td>Younghoe Koo           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>James Cook             </td></tr>
 <tr><td> LV</td><td>Zamir White            </td></tr>
@@ -115,7 +115,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>PIT</td><td>Kenny Pickett          </td></tr>
 <tr><td>WAS</td><td>Jahan Dotson           </td></tr>
-<tr><td>DET</td><td>Jameson Williams       </td></tr>
+<tr><td> SF</td><td>Jordan Mason           </td></tr>
 </table>
 </td>
 <td valign=top>
