--- a/week2.html
+++ b/week2.html
@@ -143,7 +143,7 @@
 <tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Fournette</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
-<tr><td>ARobinson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Smith-Schuster</td><td></td><td align=right>0</td></tr>
 <tr><td>THill</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Gano</td>          <td></td><td align=right>0</td></tr>
 <tr><td>York</td>          <td></td><td align=right>0</td></tr>
