--- a/pickups.html
+++ b/pickups.html
@@ -324,45 +324,10 @@
 <table width=650 border=2>
 <tr bgcolor="#000A78">
 <td colspan=2><font size=4 color='white'><center>Trades</td></tr>
-<!--
-<tr><td width=50>9/9</td>
+<tr><td width=50>9/13</td>
 <td width=600>
 Free Pickups:<br>
-Team 2  - Matt Breida/Gus Edwards (9/9)<br>
-Team 4  - Eli Mitchell/Raheem Mostert (9/15)<br>
-Team 9  - Larry Rountree/Jerry Jeudy (9/15)<br>
-Team 5  - Derek Carr/Ryan Fitzpatrick (9/16)<br>
-Team 5  - Mark Ingram/Wil Lutz (9/16)<br>
-Team 8  - Alexander Mattison/Nico Collins (9/24)<br>
-Team 4  - Daniel Jones/Tua Tagovailoa (9/26)<br>
-Team 5  - Damien Williams/DJ Chark (10/5)<br>
-Team 6  - Alex Collins/Rashad Penny (10/7)<br>
-Team 6  - Sam Darnold/Justice Hill (10/8)<br>
-Team 4  - Darrel Williams/Tony Jones (10/12)<br>
-Team 7  - Devontae Booker/Le'Veon Bell (10/13)<br>
-Team 6  - Randy Bullock/JuJu Smith-Schuster (10/19)<br>
-Team 6  - Demetric Felton/Tyrell Williams (10/19)<br>
-Team 3  - Hunter Henry/Logan Thomas (10/20)<br>
-Team 6  - Michael Pittman/Jose Borregales (10/26)<br>
-Team 6  - Tommy Sweeney/Rodrigo Blankenship (10/26)<br>
-Team 8  - Greg Joseph/Miles Sanders (10/31)<br>
-Team 5  - Adrian Peterson/Robert Tonyan (11/2)<br>
-Team 6  - Jordan Love/Henry Ruggs (11/3)<br>
-Team 6  - Jordan Howard/Jameis Winston (11/10)<br>
-Team 6  - D'Onta Foreman/Michael Thomas (11/11)<br>
-Team 6  - Chase Claypool/Sam Darnold (11/14)<br>
-Team 5  - CJ Uzomah/Chase Edmonds (11/16)<br>
-Team 6  - Tyrod Taylor/Chris Carson (11/23)<br>
-Team 1  - Kendrick Bourne/Christian McCaffrey (11/30)<br>
-Team 1  - Dontrell Hilliard/Joey Slye (12/7)<br>
-Team 3  - Dalton Schultz/Quinn Nordin (12/9)<br>
-Team 8  - Jeff Wilson/Corey Davis (12/12)<br>
-Team 6  - Rashaad Penny/Kenyan Drake (12/13)<br>
-Team 7  - Le'Veon Bell/Trey Sermon (12/21)<br>
-Team 8  - Russell Gage/Allen Robinson (12/22)<br>
-Team 9  - Ian Book/TJ Hockenson (12/23)<br>
-Team 7  - Justin Jackson/Harrison Butker (12/24)<br>
-Team 10 - Gabriel Davis/DeAndre Hopkins (12/26)
+Team 2  - Younghoe Koo/Rodrigo Blankenship (9/13)<br>
+Team 4  - Jordan Mason/Jameson Williams (9/13)
 </td></tr>
--->
 </table>
